--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,5 +15,5 @@
     <color name="GradientRed">#BC1131</color>
     <color name="GradientBlack">#080808</color>
     <color name="GreyButton">#363435</color>
-
+<!--    <color name=""></color>-->
 </resources>
